Fix z-index

--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999999999999999999999999;
+  z-index: 999999999;
 }
 
 .game-app * {
